src/main/java/org/example/grammer_spec
program : stmt* EOF

subprogram : stmt*

stmt :
    expr_stmt       |
    var_decl        |
    var_assignment  |
    if              |
    for             |
    while           |
    func_decl       |
    return_stmt ;

expr_stmt: expr sep_ex ;

expr : logical_or_expr;

logical_or_expr : logical_and_expr (or logical_and_expr)* ;

logical_and_expr : equality_expr (and equality_expr)* ;

equality_expr : relational_expr ((== | !=) relational_expr)? ;

relational_expr : additive_expr (relational additive_expr)? ;
relational : == | != | < | > | <= | >= ;

additive_expr:
    multiplicative_expr ((+|- multiplicative_expr)* ;

multiplicative_expr:
    unary_expr ((* | / | %) unary_expr)* ;

unary_expr:
    (+ | - | not)? (group_expr | function_call | terminal) ;

group : "(" expr ")" ;

function_call : ident "(" argument_list ")" ;
argument_list : expr (, expr)* | e ;

terminal :
    ident    |
    literal ;

var_decl :
    type ident (assign expr)? sep_ex ;

var_assignment :
    ident assign expr sep_ex ;

if :
    if "(" expr ")" { subprogram } elseif* else? ;

elseif:
    elseif "(" expr ")" { subprogram } ;

else:
    else { subprogram } ;

for :
    for "(" (var_decl | var_assignment) expr sep_ex expr ")" { subprogram } ;

while :
    while "(" expr ")" { subprogram } ;

func_decl :
    type ident "(" argument_decl_list ")" { subprogram } ;

return_stmt :
    return expr sep_exp ;
